# technology_practice

./: README.md
genetic_algorithm/: CMakeLists.txt  algo.h  game.h  main.cpp  visual.cpp
task2/: CMakeLists.txt  build.sh  main.cpp
task2/code/: Annealing.hpp  Format.hpp  Generator.hpp  Mutation.hpp  Schedule.hpp  Temperature.cpp  Temperature.hpp
task2/experiments/: draw.py
task2/sample_inputs/: hand1.csv  hand2.csv
task3/: CMakeLists.txt  main.cpp
task3/src/: Factory.hpp  Types.cpp  Types.hpp  algorithm.hpp
task3/src/tests/: calc_test.cpp  semantic_test.cpp
